@@ -1,5 +1,6 @@
 == master
 
+* Fix ActiveRecord 2.0.0 - 2.2.3 integrations failing if version info isn't already loaded
 * Fix integration with dirty attribute tracking on DataMapper 0.10.3
 * Fix observers failing in ActiveRecord 3.0.0.beta4+ integrations
 * Fix deprecation warning in Rails 3 railtie [Chris Yuan]
